Fix T79616: Sort by column in filebrowser is broken

After changes in rBc606044157a3, mouse press events would be blocked by
the selection operator. This only worked by chance before.